include/electionguard/manifest.h

/**
 * Enumeration for the type of ElectionType
 * see: https://developers.google.com/elections-data/reference/election-type
 */
typedef enum eg_election_type_e {
    ELECTIONGUARD_ELECTION_TYPE_UNKNOWN = 0,
    ELECTIONGUARD_ELECTION_TYPE_GENERAL = 1,
    ELECTIONGUARD_ELECTION_TYPE_PARTISAN_PRIMARY_CLOSED = 2,
    ELECTIONGUARD_ELECTION_TYPE_PARTISAN_PRIMARY_OPEN = 3,
    ELECTIONGUARD_ELECTION_TYPE_PRIMARY = 4,
    ELECTIONGUARD_ELECTION_TYPE_RUNOFF = 5,
    ELECTIONGUARD_ELECTION_TYPE_SPECIAL = 6,
    ELECTIONGUARD_ELECTION_TYPE_OTHER = 7,
} eg_election_type_t;
/**
 * Enumeration for the type of VoteVariationType
 * see: https://developers.google.com/elections-data/reference/vote-variation
 */
typedef enum eg_vote_variation_type_e {
    ELECTIONGUARD_VOTE_VARIATION_TYPE_UNKNOWN = 0,
    ELECTIONGUARD_VOTE_VARIATION_TYPE_ONE_OF_M = 1,
    ELECTIONGUARD_VOTE_VARIATION_TYPE_APPROVAL = 2,
    ELECTIONGUARD_VOTE_VARIATION_TYPE_BORDA = 3,
    ELECTIONGUARD_VOTE_VARIATION_TYPE_CUMULATIVE = 4,
    ELECTIONGUARD_VOTE_VARIATION_TYPE_MAJORITY = 5,
    ELECTIONGUARD_VOTE_VARIATION_TYPE_N_OF_M = 6,
    ELECTIONGUARD_VOTE_VARIATION_TYPE_PLURALITY = 7,
    ELECTIONGUARD_VOTE_VARIATION_TYPE_PROPORTIONAL = 8,
    ELECTIONGUARD_VOTE_VARIATION_TYPE_RANGE = 9,
    ELECTIONGUARD_VOTE_VARIATION_TYPE_RCV = 10,
    ELECTIONGUARD_VOTE_VARIATION_TYPE_SUPER_MAJORITY = 11,
    ELECTIONGUARD_VOTE_VARIATION_TYPE_OTHER = 12
} eg_vote_variation_type_t;
/**
 * Data entity used to represent multi-national text. Use when text on a ballot contains multi-national text.
 * See: https://developers.google.com/elections-data/reference/internationalized-text
 */
typedef struct eg_internationalized_text_s eg_internationalized_text_t;
/**
* For defining contact information about objects such as persons, boards of authorities, and organizations.
*
* Contact Information values are not used internally by ElectionGuard when encrypting ballots
* but are included for checking the validity of a supplied manifest.
*
* See: https://developers.google.com/elections-data/reference/contact-information
*/
typedef struct eg_contact_information_s eg_contact_information_t;
/**
* A geopolitical unit describes any physical or
* virtual unit of representation or vote/seat aggregation.
* Use this entity for defining geopolitical units such as
* cities, districts, jurisdictions, or precincts,
* for the purpose of associating contests, offices, vote counts,
* or other information with the geographies.
*
* Geopolitical Units are not used when encrypting ballots but are required by
* ElectionGuard to determine the validity of ballot styles.
*
* See: https://developers.google.com/elections-data/reference/gp-unit
*/
typedef struct eg_geopolitical_unit_s eg_geopolitical_unit_t;
/*
* A BallotStyle works as a key to uniquely specify a set of contests. See also `ContestDescription`.
*
* For ElectionGuard, each contest is associated with a specific geopolitical unit,
* and each ballot style is associated with at least one geopolitical unit.
*
* It is up to the consuming application to determine how to interpreit the relationships
* between these entity types.
*/
typedef struct eg_ballot_style_s eg_ballot_style_t;
/*
* Use this entity to describe a political party that can then be referenced from other entities.
*
* It is not required to define a party for Electionguard.
*
* See: https://developers.google.com/elections-data/reference/party
*/
typedef struct eg_party_s eg_party_t;
/*
* Entity describing information about a candidate in a contest.
* See: https://developers.google.com/elections-data/reference/candidate
*
* Note: The ElectionGuard Data Spec deviates from the NIST model in that
* selections for any contest type are considered a "candidate".
* for instance, on a yes-no referendum contest, two `candidate` objects
* would be included in the model to represent the `affirmative` and `negative`
* selections for the contest.  See the wiki, readme's, and tests in this repo for more info.
*/
typedef struct eg_candidate_s eg_candidate_t;
/**
 * Data entity for the ballot selections in a contest,
 * for example linking candidates and parties to their vote counts.
 * See: https://developers.google.com/elections-data/reference/ballot-selection
 *
 * Note: The ElectionGuard Data Spec deviates from the NIST model in that
 * there is no difference for different types of selections.
 *
 * The ElectionGuard Data Spec deviates from the NIST model in that
 * `sequence_order` is a required field since it is used for ordering selections
 * in a contest to ensure various encryption primitives are deterministic.
 * For a given election, the sequence of selections displayed to a user may be different
 * however that information is not captured by default when encrypting a specific ballot.
 */
typedef struct eg_selection_description_s eg_selection_description_t;
/**
 * Use this data entity for describing a contest and linking the contest
 * to the associated candidates and parties.
 * See: https://developers.google.com/elections-data/reference/contest
 * Note: The ElectionGuard Data Spec deviates from the NIST model in that
 * `sequence_order` is a required field since it is used for ordering selections
 * in a contest to ensure various encryption primitives are deterministic.
 * For a given election, the sequence of contests displayed to a user may be different
 * however that information is not captured by default when encrypting a specific ballot.
 */
typedef struct eg_contest_description_s eg_contest_description_t;
/**
 * Unique internal identifier that's used by other elements to reference this element.
 */
EG_API eg_electionguard_status_t
eg_contest_description_get_object_id(eg_contest_description_t *handle, const char **out_object_id);
/**
 * The object id of the geopolitical unit associated with this contest.
 * Note: in concordance with the NIST standard, the name `ElectoralDistrictId` is kept
 */
EG_API eg_electionguard_status_t eg_contest_description_get_electoral_district_id(
  eg_contest_description_t *handle, const char **out_electoral_district_id);
/**
 * The sequence order defining this contest's place in the contest collection of the ballot style.
 * Note: this is specifically for programs to interpret and does not necessarily represent
 * the order in which contests are presented to a user.
 */
EG_API uint64_t eg_contest_description_get_sequence_order(eg_contest_description_t *handle);
/**
 * The vote variation type.  Currently ElectionGuard supports one_of_m and n_of_m
 */
EG_API eg_vote_variation_type_t
eg_contest_description_get_vote_variation(eg_contest_description_t *handle);
/**
 * The number of candidates that are elected in the contest, which is the n of an n-of-m contest
 */
EG_API uint64_t eg_contest_description_get_number_elected(eg_contest_description_t *handle);
/**
 * The maximum number of votes or write-ins allowed per voter in this contest.
 */
EG_API uint64_t eg_contest_description_get_votes_allowed(eg_contest_description_t *handle);
/**
 * Name of the contest as it's listed on the results report,
 * not necessarily as it appears on the ballot.
 */
EG_API eg_electionguard_status_t eg_contest_description_get_name(eg_contest_description_t *handle,
                                                                 const char **out_name);
/**
 * Title of the contest, which must match how it appears on the voters' ballots.
 */
EG_API eg_electionguard_status_t eg_contest_description_get_ballot_title(
  eg_contest_description_t *handle, eg_internationalized_text_t **out_ballot_title_ref);
/**
 * Subtitle of the contest, which must match how it appears on the voters' ballots.
 */
EG_API eg_electionguard_status_t eg_contest_description_get_ballot_subtitle(
  eg_contest_description_t *handle, eg_internationalized_text_t **out_ballot_subtitle_ref);
EG_API uint64_t eg_contest_description_get_selections_size(eg_contest_description_t *handle);
EG_API eg_electionguard_status_t
eg_contest_description_get_selection_at_index(eg_contest_description_t *handle, uint64_t in_index,
                                              eg_selection_description_t **out_selection_ref);
/**
 * A hash representation of the object
 */
EG_API eg_electionguard_status_t eg_contest_description_crypto_hash(
  eg_contest_description_t *handle, eg_element_mod_q_t **out_crypto_hash);
/**
 * ContestDescriptionWithPlaceholders is a `ContestDescription` with ElectionGuard `placeholder_selections`.
 * (The ElectionGuard spec requires for n-of-m elections that there be *exactly* n counters that are one
 * with the rest zero, so if a voter deliberately undervotes, one or more of the placeholder counters will
 * become one. This allows the `ConstantChaumPedersenProof` to verify correctly for undervoted contests.)
 */
typedef struct eg_contest_description_with_placeholders_s
  eg_contest_description_with_placeholders_t;
EG_API eg_electionguard_status_t eg_contest_description_with_placeholders_new_with_parties(
  const char *in_object_id, char *in_electoral_district_id, uint64_t in_sequence_order,
  eg_vote_variation_type_t in_vote_variation, uint64_t in_number_elected, char *in_name,
  eg_selection_description_t *in_selections[], uint64_t in_selections_size,
  char *in_primary_party_ids[], uint64_t in_primary_party_ids_size,
  eg_selection_description_t *in_placeholder_selections[], uint64_t in_placeholder_selections_size,
  eg_contest_description_with_placeholders_t **out_handle);
EG_API eg_electionguard_status_t
eg_contest_description_with_placeholders_new_with_title_and_parties(
  const char *in_object_id, char *in_electoral_district_id, uint64_t in_sequence_order,
  eg_vote_variation_type_t in_vote_variation, uint64_t in_number_elected, char *in_name,
  eg_internationalized_text_t *in_ballot_title, eg_internationalized_text_t *in_ballot_subtitle,
  eg_selection_description_t *in_selections[], uint64_t in_selections_size,
  char *in_primary_party_ids[], uint64_t in_primary_party_ids_size,
  eg_selection_description_t *in_placeholder_selections[], uint64_t in_placeholder_selections_size,
  eg_contest_description_with_placeholders_t **out_handle);
EG_API eg_electionguard_status_t
eg_contest_description_with_placeholders_free(eg_contest_description_with_placeholders_t *handle);
EG_API uint64_t eg_contest_description_with_placeholders_get_placeholders_size(
  eg_contest_description_with_placeholders_t *handle);
EG_API eg_electionguard_status_t eg_contest_description_with_placeholders_get_placeholder_at_index(
  eg_contest_description_with_placeholders_t *handle, uint64_t in_index,
  eg_contest_description_with_placeholders_t **out_placeholder_ref);
EG_API bool eg_contest_description_with_placeholders_is_placeholder(
  eg_contest_description_with_placeholders_t *handle, eg_selection_description_t *in_selection);
EG_API eg_electionguard_status_t eg_contest_description_with_placeholders_selection_for_id(
  eg_contest_description_with_placeholders_t *handle, char *in_selection_id,
  eg_selection_description_t **out_selection_ref);
/**
* Use this entity for defining the structure of the election and associated
* information such as candidates, contests, and vote counts.  This class is
* based on the NIST Election Common Standard Data Specification.  Some deviations
* from the standard exist.
*
* This structure is considered an immutable input object and should not be changed
* through the course of an election, as it's hash representation is the basis for all
* other hash representations within an ElectionGuard election context.
*
* @see https://developers.google.com/elections-data/reference/election
*/
typedef struct eg_election_manifest_s eg_election_manifest_t;
EG_API eg_electionguard_status_t eg_election_manifest_new(
  char *in_election_scope_id, eg_election_type_t in_election_type, uint64_t in_start_date,
  uint64_t in_end_date, eg_geopolitical_unit_t *in_geopolitical_units[],
  uint64_t in_geopolitical_units_size, eg_party_t *in_parties[], uint64_t in_parties_size,
  eg_candidate_t *in_candidates[], uint64_t in_candidates_size,
  eg_contest_description_t *in_contests[], uint64_t in_contests_size,
  eg_ballot_style_t *in_ballot_styles[], uint64_t in_ballot_styles_size,
  eg_election_manifest_t **out_handle);
EG_API eg_electionguard_status_t eg_election_manifest_new_with_contact(
  char *in_election_scope_id, eg_election_type_t in_election_type, uint64_t in_start_date,
  uint64_t in_end_date, eg_geopolitical_unit_t *in_geopolitical_units[],
  uint64_t in_geopolitical_units_size, eg_party_t *in_parties[], uint64_t in_parties_size,
  eg_candidate_t *in_candidates[], uint64_t in_candidates_size,
  eg_contest_description_t *in_contests[], uint64_t in_contests_size,
  eg_ballot_style_t *in_ballot_styles[], uint64_t in_ballot_styles_size,
  eg_internationalized_text_t *in_name, eg_contact_information_t *in_contact_info,
  eg_election_manifest_t **out_handle);
EG_API uint64_t eg_election_manifest_get_start_date(eg_election_manifest_t *handle);