bindings/netstandard/ElectionGuard/ElectionGuard.Encryption/NativeInterface.cs


            [DllImport(DllName,
                EntryPoint = "eg_contest_description_with_placeholders_new_with_parties",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string objectId,
                [MarshalAs(UnmanagedType.LPStr)] string electoralDistrictId,
                ulong sequenceOrder,
                VoteVariationType voteVariation,
                ulong numberElected,
                [MarshalAs(UnmanagedType.LPStr)] string name,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] selections,
                ulong selectionsSize,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] string[] primaryPartyIds,
                ulong primaryPartyIdsSize,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] placeholders,
                ulong placeholdersSize,
                out ContestDescriptionWithPlaceholdersHandle handle);

            [DllImport(DllName,
                EntryPoint = "eg_contest_description_with_placeholders_new_with_title_and_parties",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string objectId,
                [MarshalAs(UnmanagedType.LPStr)] string electoralDistrictId,
                ulong sequenceOrder,
                VoteVariationType voteVariation,
                ulong numberElected,
                ulong votesAllowed,
                [MarshalAs(UnmanagedType.LPStr)] string name,
                InternationalizedText.InternationalizedTextHandle ballotTitle,
                InternationalizedText.InternationalizedTextHandle ballotSubTitle,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] selections,
                ulong selectionsSize,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] string[] primaryPartyIds,
                ulong primaryPartyIdsSize,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] placeholders,
                ulong placeholdersSize,
                out ContestDescriptionWithPlaceholdersHandle handle);

            [DllImport(DllName, EntryPoint = "eg_contest_description_with_placeholders_free",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status Free(ContestDescriptionWithPlaceholdersType* handle);

            #region ContestDescription Methods

            // Since the underlying c++ class inherits from ContestDescription
            // these functions call those methods substituting the 
            // ContestDescriptionWithPlaceholdersHandle opaque pointer type

            [DllImport(DllName, EntryPoint = "eg_contest_description_get_object_id",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetObjectId(
                ContestDescriptionWithPlaceholdersHandle handle, out IntPtr objectId);

            [DllImport(DllName, EntryPoint = "eg_contest_description_get_electoral_district_id",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetElectoralDistrictId(
                ContestDescriptionWithPlaceholdersHandle handle, out IntPtr electoralDistrictId);

            [DllImport(DllName, EntryPoint = "eg_contest_description_get_sequence_order",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ulong GetSequenceOrder(
                ContestDescriptionWithPlaceholdersHandle handle);

            [DllImport(DllName, EntryPoint = "eg_contest_description_get_vote_variation",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern VoteVariationType GetVoteVariationType(
                ContestDescriptionWithPlaceholdersHandle handle);

            [DllImport(DllName, EntryPoint = "eg_contest_description_get_number_elected",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ulong GetNumberElected(
                ContestDescriptionWithPlaceholdersHandle handle);

            [DllImport(DllName, EntryPoint = "eg_contest_description_get_votes_allowed",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ulong GetVotesAllowed(
                ContestDescriptionWithPlaceholdersHandle handle);

            [DllImport(DllName, EntryPoint = "eg_contest_description_get_name",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetName(
                ContestDescriptionWithPlaceholdersHandle handle, out IntPtr name);

            [DllImport(DllName, EntryPoint = "eg_contest_description_get_ballot_title",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetBallotTitle(
                ContestDescriptionWithPlaceholdersHandle handle,
                out InternationalizedText.InternationalizedTextHandle name);

            [DllImport(DllName, EntryPoint = "eg_contest_description_get_ballot_subtitle",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetBallotSubTitle(
                ContestDescriptionWithPlaceholdersHandle handle,
                out InternationalizedText.InternationalizedTextHandle name);

            [DllImport(DllName, EntryPoint = "eg_contest_description_get_selections_size",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ulong GetSelectionsSize(
                ContestDescriptionWithPlaceholdersHandle handle);

            [DllImport(DllName, EntryPoint = "eg_contest_description_get_selection_at_index",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetSelectionAtIndex(
                ContestDescriptionWithPlaceholdersHandle handle,
                ulong index,
                out SelectionDescription.SelectionDescriptionHandle partyId);

            [DllImport(DllName, EntryPoint = "eg_contest_description_crypto_hash",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status CryptoHash(
                ContestDescriptionWithPlaceholdersHandle handle,
                out ElementModQ.ElementModQHandle crypto_hash);

            #endregion

            [DllImport(DllName,
                EntryPoint = "eg_contest_description_with_placeholders_get_placeholders_size",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ulong GetPlaceholdersSize(
                ContestDescriptionWithPlaceholdersHandle handle);

            [DllImport(DllName,
                EntryPoint = "eg_contest_description_with_placeholders_get_placeholder_at_index",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetPlaceholderAtIndex(
                ContestDescriptionWithPlaceholdersHandle handle,
                ulong index,
                out SelectionDescription.SelectionDescriptionHandle partyId);

            [DllImport(DllName,
                EntryPoint = "eg_contest_description_with_placeholders_is_placeholder",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern bool IsPlaceholder(
                ContestDescriptionWithPlaceholdersHandle handle,
                SelectionDescription.SelectionDescriptionHandle selection);

            [DllImport(DllName,
                EntryPoint = "eg_contest_description_with_placeholders_selection_for_id",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status SelectionForId(
                ContestDescriptionWithPlaceholdersHandle handle,
                [MarshalAs(UnmanagedType.LPStr)] string selectionId,
                SelectionDescription.SelectionDescriptionHandle selection);
        }

        #endregion

        #region Manifest

        internal static class Manifest
        {
            [DllImport(DllName, EntryPoint = "eg_election_manifest_new",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string electionScopeId,
                [MarshalAs(UnmanagedType.LPStr)] string specVersion,
                ElectionType electionType,
                ulong startDate,
                ulong endDate,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] gpUnits,
                ulong gpUnitsSize,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] parties,
                ulong partiesSize,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] candidates,
                ulong candidatesSize,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] contests,
                ulong contestSize,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] ballotStyles,
                ulong ballotStylesSize,
                out ElectionGuard.Manifest.External.ManifestHandle handle);

            [DllImport(DllName, EntryPoint = "eg_election_manifest_new_with_contact",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string electionScopeId,
                [MarshalAs(UnmanagedType.LPStr)] string specVersion,
                ElectionType electionType,
                ulong startDate,
                ulong endDate,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] gpUnits,
                ulong gpUnitsSize,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] parties,
                ulong partiesSize,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] candidates,
                ulong candidatesSize,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] contests,
                ulong contestSize,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] ballotStyles,
                ulong ballotStylesSize,
                InternationalizedText.InternationalizedTextHandle name,
                ContactInformation.ContactInformationHandle contact,
                out ElectionGuard.Manifest.External.ManifestHandle handle);

            [DllImport(DllName, EntryPoint = "eg_election_manifest_get_start_date",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ulong GetStartDate(
                ElectionGuard.Manifest.External.ManifestHandle handle);
